ecmascript/parser/tests/test262-error-references/fail/efb9e5d27e1cfa30.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/efb9e5d27e1cfa30.js:1:22
  |
1 | (function () { yield 10 })
  |                      ^^

